--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -33,7 +35,7 @@
     <main class="container">
         <section class="new-tweet">
             <h2>Compose Tweet</h2>
-            <form>
+            <form action="/tweets/" method="post">
               <textarea name="text" placeholder="What are you humming about?"></textarea>
               <input type="submit" value="Tweet">
               <span class="counter">140</span>
@@ -78,7 +80,8 @@
          <p>sadfsdafsdaf<br/></p>
          <p>sadfsdafsdaf<br/></p>
          <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p><p>sadfsdafsdaf<br/></p>
+         <p>sadfsdafsdaf<br/></p>
+         <p>sadfsdafsdaf<br/></p>
          <p>sadfsdafsdaf<br/></p>
          <p>sadfsdafsdaf<br/></p>
          <p>sadfsdafsdaf<br/></p>
