--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -41,54 +43,7 @@
               <span class="counter">140</span>
             </form>
           </section>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
-         <p>sadfsdafsdaf<br/></p>
+         <p>no new post</p>
 
     </main>
 
