Added hover feature and function to loop thru tweets

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -43,9 +45,27 @@
               <span class="counter">140</span>
             </form>
           </section>
-         <p>no new post</p>
+
+          <section class="tweets" id="tweets-container">
+            <article>
+              <header>
+                <img class="logo" src="/images/sf1.png">
+                <span class="name">Charles Wong</span>
+                <span class="handle">@cwong</span>
+              </header>
+              <p class="text">asdfsdafdasfsadfsdaf</p>
+              <footer class="tweet-footer">
+                <span class="createdAt">10 days ago</span>
+                <img class="heart" src="/images/heart.png">
+                <img class="heart" src="/images/heart.png">
+                <img class="heart" src="/images/heart.png">
+              </footer>
+            </article>
+            
+          </section>
 
     </main>
 
   </body>
 </html>
+
