fixed layout issue

--- a/public/index.html
+++ b/public/index.html
@@ -25,29 +25,33 @@
     <script type="text/javascript" src="/scripts/app.js"></script>
 
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+
   </head>
 
   <body>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png">
+      <img id="tweeter-logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <img id="compose" src="/images/compose.png"></span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-        <section class="new-tweet">
+
+        <section id="new-tweet-container">
             <h2>Compose Tweet</h2>
-            <form action="/tweets/" method="post">
+            <form action="/tweets/" method="post" id='tweets-form'>
               <textarea name="text" placeholder="What are you humming about?"></textarea>
               <input type="submit" value="Tweet">
               <span class="counter">140</span>
             </form>
-          </section>
+        </section>
 
           <section class="tweets" id="tweets-container">
-            <article>
+            <article class="tweeted">
               <header>
                 <img class="logo" src="/images/sf1.png">
                 <span class="name">Charles Wong</span>
@@ -61,7 +65,6 @@
                 <img class="heart" src="/images/heart.png">
               </footer>
             </article>
-            
           </section>
 
     </main>
