--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
 
+    <script type="text/javascript" src="/scripts/moment.js"></script>
+
+    <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
 
