--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
         </section>
 
           <section class="tweets" id="tweets-container">
-            <article class="tweeted">
+            <!--<article class="tweeted">
               <header>
                 <img class="logo" src="/images/sf1.png">
                 <span class="name">Charles Wong</span>
@@ -72,7 +72,7 @@
                 <img class="tweet-footer-icon" src="/images/retweet-icon.png">
                 <img class="tweet-footer-icon" src="/images/flag-icon.png">
               </footer>
-            </article>
+            </article>-->
           </section>
 
     </main>
